apps/app-proxy/overlays/dan-a-eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: dan-a-eks-cap-app-proxy
  namespace: dan-a-eks
spec:
  ingressClassName: nginx
  rules:
  - host: dan404.sa.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
